--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="css/styleOne.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,6 +13,208 @@
     />
   </head>
   <body>
+    <!-- Navbar section -->
+    <section class="d-flex justify-content-evenly">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link active px-5 fw-bolder text-hover"
+                  aria-current="page"
+                  href="#"
+                  >Hamzas books</a
+                >
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle px-5 fw-bolder text-hover"
+                  href="#"
+                  id="navbarDropdownMenuLink"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Lectures
+                </a>
+                <ul
+                  class="dropdown-menu"
+                  aria-labelledby="navbarDropdownMenuLink"
+                >
+                  <li><a class="dropdown-item" href="#">Technology</a></li>
+                  <li><a class="dropdown-item" href="#">History</a></li>
+                  <li>
+                    <a class="dropdown-item" href="#">Poletics</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item px-5 fw-bolder">
+                <a class="nav-link text-hover" href="#">Articles</a>
+              </li>
+              <li class="nav-item px-5 fw-bolder">
+                <a class="nav-link text-hover" href="#">Podcast</a>
+              </li>
+             <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle px-5 fw-bolder text-hover"
+                  href="#"
+                  id="navbarDropdownMenuLink"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  About me
+                </a>
+                <ul
+                  class="dropdown-menu"
+                  aria-labelledby="navbarDropdownMenuLink"
+                >
+                  <li><a class="dropdown-item text-hover" href="#">Contact Info</a></li>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item px-5 fw-bolder text-hover">
+                <a class="nav-link" href="#">Search</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </section>
+    <!-- Middle logo section -->
+    <section class="d-flex justify-content-center mt-5" >
+      <div class="logo-img">
+        <img src="img/logo/logo1.png" alt="">
+      </div>
+    </section>
+    <!-- Carousel section -->
+    <section class="mx-4 mt-5">
+      <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+    <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+    <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner carousel-img">
+    <div class="carousel-item active">
+      <img src="img/carousel-img/pic1.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/carousel-img/pic2.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/carousel-img/pic3.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </a>
+</div>
+    </section>
+    <!-- Article & side sections -->
+    <section class="mx-4 mt-5">
+      <div class="row">
+    <div class="col-8">
+     <div class="d-flex justify-content-start">
+        <div class="articel-img">
+        <img src="img/article/pic1.jpg" alt="">
+        </div>
+        <div class="mx-4  details-font-sizeing ">
+          <h2>A VIRAL AWAKENING</h2>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis porro temporibus molestiae quidem odit voluptas, dolores consectetur asperiores accusamus vitae assumenda esse distinctio et officiis explicabo. Distinctio consequatur molestiae sint!</p>
+        </div>
+     </div>
+     <div class="d-flex justify-content-start mt-3">
+        <div class="articel-img">
+        <img src="img/article/pic2.jpg" alt="">
+        </div>
+        <div class="mx-4  details-font-sizeing">
+          <h2>HAS SCIENCE DISPROVED GOD? DECONSTRUCTING FALSE ASSUMPTIONS</h2>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis porro temporibus molestiae quidem odit voluptas, dolores consectetur asperiores accusamus vitae assumenda esse distinctio et officiis explicabo. Distinctio consequatur molestiae sint!</p>
+        </div>
+     </div>
+     <div class="d-flex justify-content-start mt-3">
+        <div class="articel-img">
+        <img src="img/article/pic3.jpeg" alt="">
+        </div>
+        <div class="mx-4  details-font-sizeing">
+          <h2>THE PROPHETIC TRUTH: WHY MUHAMMAD ﷺ IS GOD’S FINAL MESSENGER</h2>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis porro temporibus molestiae quidem odit voluptas, dolores consectetur asperiores accusamus vitae assumenda esse distinctio et officiis explicabo. Distinctio consequatur molestiae sint!</p>
+        </div>
+     </div>
+     <div class="d-flex justify-content-start mt-3">
+        <div class="articel-img">
+        <img src="img/article/pic4.jpg" alt="">
+        </div>
+        <div class="mx-4  details-font-sizeing">
+          <h2>DIVINE LINK: THE ARGUMENT FROM DEPENDENCY</h2>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis porro temporibus molestiae quidem odit voluptas, dolores consectetur asperiores accusamus vitae assumenda esse distinctio et officiis explicabo. Distinctio consequatur molestiae sint!</p>
+        </div>
+     </div>
+    </div>
+    
+    <div class="col-4">
+      <div class="side-section">
+        <div>
+        <h3>AVAILABLE NOW: NEWLY EDITION OF THE DIVINE REALITY</h3>
+      </div>
+      <div class="mt-3">
+        <img style="width: 350px;" src="img/bookcover/pic1.jpg" alt="">
+      </div>
+      <div class="mt-3 recommended-links">
+        <h3>RECOMMENDED ESSAYS & ARTICLES</h3>
+        <ol class="mt-3">
+          <li><a href="#">Has Science Disproved God? Deconstructing False Assumptions</a></li>
+          <li><a href="#">The Qur'anic Argument for God's Existence </a></li>
+          <li><a href="#">7 Resons Why God is Worthy of Worship</a></li>
+          <li><a href="#">The Prophetic Truth: Why Muhammad ﷺ is God's Final Messenger</a></li>
+          <li><a href="#">Divine Link: The Argument from Dependency </a></li>
+          <li><a href="#">God's Testimony: The Divine Authorship of the Qur'an</a></li>
+          <li><a href="#">Is God Merciful? Islam's Response to Evil and Suffering</a></li>
+          <li><a href="#">Know God, Know Good: God & Objective Morality</a></li>
+          <li><a href="#">No God, No Value</a></li>
+        </ol>
+      </div>
+      <div>
+        <h3>Get in touch</h3>
+      </div>
+      <div>
+        <p>For questions, comments, suggestions and events please complete the form below;</p>
+      </div>
+        <div>
+          <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Name</label>
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Your Name Here">
+          </div>
+        <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+       </div>
+       <div class="mb-3"> 
+             <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Your message"></textarea>
+       </div>
+       <div style="text-align: center;">
+         <button type="button" class="btn btn-outline-success">Sand</button><br>
+         <a class="support-link" href="#">
+              <img src="https://img.icons8.com/doodle/48/000000/money.png"/>If you want to support
+         </a>
+        </a>
+       </div>
+        </div>
+      </div>
+    </div>
+  </div>
+    </section>
+    <footer>
+      <p>@2021 - Nur E Allhi. All Right Reserved.</p>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
