--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
      </div>
      <div class="d-flex justify-content-start mt-3">
         <div class="articel-img">
-        <img src="img/article/pic3.jpeg" alt="">
+        <img src="img/article/pic3.jpg" alt="">
         </div>
         <div class="mx-4  details-font-sizeing">
           <h2>THE PROPHETIC TRUTH: WHY MUHAMMAD ﷺ IS GOD’S FINAL MESSENGER</h2>
