--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="d-flex justify-content-evenly">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <div class="collapse.navbar-collapse">
             <ul class="navbar-nav">
               <li class="nav-item">
                 <a
@@ -159,7 +159,7 @@
      </div>
     </div>
     
-    <div class="col-4">
+    <div class=" col-4">
       <div class="side-section">
         <div>
         <h3>AVAILABLE NOW: NEWLY EDITION OF THE DIVINE REALITY</h3>
